--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,14 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url(./Assets/backgroundwhite.png);
+  background-size: contain;
 }
 
 header nav {
-  background-color: #7e5f5f;
-  color: red;
+  background-image: url(./Assets/backgroundBlack.png);
+  background-size: cover;
+  color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -16,21 +19,78 @@ header nav {
   font-size: 25px;
 }
 
-strong {
-  font-size: 35px;
-  color: yellow;
+#logoContainer {
+  background-image: url(./Assets/logo.svg);
+  background-size: cover;
+  z-index: 2;
+  width: 10rem;
+  height: 3.5rem;
 }
 
 #pokemon {
+  width: 90%;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 24% 24% 24% 24%;
   justify-content: space-evenly;
+  margin: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .pokemonCard {
-  border: solid black 0.1rem;
+  display: flex;
+  flex-direction: column;
   margin: 1rem;
-  padding: 1rem;
+  padding: 2rem;
+  background-color: rgb(237, 230, 230, 0.79);
+  border-radius: 1rem;
+  transition: 0.3s;
+  align-items: center;
+}
+
+.pokemonCard:hover {
+  transform: translate(0, -10px);
+}
+
+.cardImage {
+  width: 9rem;
+  height: auto;
+}
+
+.nameLikeBtn {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.likeContainer {
+  width: 100%;
+  text-align: end;
+  margin-top: 0.5rem;
+}
+
+.likeBtn {
+  background-color: beige;
+  background-image: url(./Assets/likeBall.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 2rem;
+  width: 2rem;
+  border: none;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
+.likeBtn:hover {
+  height: 2.5rem;
+  width: 2.5rem;
+  background-image: url(./Assets/openBall.png);
+}
+
+.pop-up:hover {
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
 
 .pop-up-container {
@@ -84,4 +144,10 @@ footer {
   padding: 1rem;
   background-color: #7e5f5f;
   color: white;
+  background-image: url(./Assets/backgroundBlack.png);
+  background-size: cover;
+}
+
+.disclamer {
+  font-size: 0.75rem;
 }
