--- a/src/style.css
+++ b/src/style.css
@@ -109,7 +109,7 @@ header nav {
   grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 50%);
   border: 1px solid black;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .top {
@@ -139,7 +139,24 @@ header nav {
 .img {
   width: 9rem;
   height: auto;
-  background-color: pink;
+  background: linear-gradient(100deg, white, purple, white, purple);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  border-radius: 4px;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .close {
