--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,10 @@ header nav {
   height: auto;
 }
 
+.pokemonNames {
+  font-weight: 700;
+}
+
 .nameLikeBtn {
   display: flex;
   justify-content: space-between;
