--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,10 @@ header nav {
   font-size: 25px;
 }
 
+.navItem {
+  display: none;
+}
+
 #logoContainer {
   background-image: url(./Assets/logo.svg);
   background-size: cover;
@@ -31,7 +35,7 @@ header nav {
 #pokemon {
   width: 90%;
   display: grid;
-  grid-template-columns: 24% 24% 24% 24%;
+  grid-template-columns: 80%;
   justify-content: space-evenly;
   margin: auto;
   margin-top: 2rem;
@@ -323,4 +327,20 @@ footer {
 
 .disclamer {
   font-size: 0.75rem;
+}
+
+@media screen and (min-width: 768px) {
+  #pokemon {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 24% 24% 24% 24%;
+    justify-content: space-evenly;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .navItem {
+    display: block;
+  }
 }
