--- a/src/style.css
+++ b/src/style.css
@@ -107,22 +107,21 @@ header nav {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 75vw;
-  height: 100vh;
+  width: 70vw;
+  height: 90vh;
   max-height: 600vh;
-  background-color: #7e5f5f;
+  background-image: url(./Assets/backgroundBlack.png);
   margin: auto;
-  border: 1px solid black;
   border-radius: 8px;
   overflow-x: hidden;
   pointer-events: all;
-  z-index: 100;
+  z-index: 1;
 }
 
 .img {
   width: 18rem;
   height: auto;
-  background: linear-gradient(100deg, white, purple, white, purple);
+  background: linear-gradient(100deg, white, rgb(237, 230, 230, 0.79), white, rgb(237, 230, 230, 0.79));
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
   border-radius: 4px;
@@ -133,6 +132,7 @@ header nav {
   margin-top: 0.5rem;
   font-size: 40px;
   font-style: italic;
+  color: white;
   font-weight: 900;
 }
 
@@ -152,7 +152,7 @@ header nav {
 
 .black {
   width: 100%;
-  height: 3rem;
+  height: 0.1rem;
   background-color: rgba(79, 42, 79, 0.279);
 }
 
@@ -206,19 +206,26 @@ header nav {
 }
 
 .add {
-  color: rgba(18, 0, 18, 0.279);
+  color: rgb(237, 230, 230, 0.79);
   font-size: 30px;
   font-weight: 900;
 }
 
 .comments-count {
   text-decoration: underline;
+  color: rgb(237, 230, 230, 0.79);
 }
 
 .comments {
   background-color: rgba(79, 42, 79, 0.279);
   border: 2px solid #000;
   border-radius: 8px;
+  color: rgb(237, 230, 230, 0.79);
+  padding: 0.2rem;
+}
+
+.comentItem {
+  padding: 0.3rem;
 }
 
 .top {
@@ -229,6 +236,7 @@ header nav {
 
 .second {
   width: 100%;
+  color: rgb(237, 230, 230, 0.79);
   padding-left: 1.5rem;
 }
 
